# TorahWebApp

./: .gitignore  BACKEND_SCHEMA.md  README.md  package-lock.json  package.json
.claude/: settings.json  settings.local.json
Jsongenerators/: README.md  _common.py  add_content.py  build_all.py  requirements.txt
Jsongenerators/lucene-indexer/: pom.xml
TorahWeb/: App.tsx  app.json  index.js  jest.globals.d.ts  jest.setup.js  launch-android.ps1  package-lock.json  package.json  patch-log.txt  scrape-website.js
TorahWeb/ScrapedHTML/: _url_mapping.json  audio_index.html  audio_speakers_audio.html  audio_yomtov_index.html  author_allAuthors.html  author_dtwe.html  author_rdst.html  author_rhab.html  author_rkoe.html  author_rleb.html  author_rlop.html  author_rneu.html  author_rros.html  author_rsac.html  author_rsch.html  author_rsch_dt_special.html  author_rsob.html  author_rtwe.html  author_rtwe_dt_special.html  author_rwil.html  author_ryud.html  books.html  donate.html  dt.html  index.html  parsha_bamidbar_bamidbar.html  parsha_breishis_breishis.html  parsha_devarim_devarim.html  parsha_parsha.html  parsha_shemos_shemos.html  parsha_vayikra_vayikra.html  special.html  subscribe.html  thisweek.html  torah_2020_moadim_rhab_shavuos.html  torah_2020_moadim_rwil_rh5781.html  torah_2020_parsha_rwil_metzora.html  torah_2021_parsha_rros_balak.html  torah_2021_parsha_rwil_naso.html  (+68 more)
TorahWeb/tantivy-bridge/: .gitignore  Cargo.toml  README.md  build-android.sh  build-ios.sh  cbindgen.toml
TorahWeb/tantivy-bridge/src/: lib.rs
app/: build.gradle.kts
(+61 files in other folders)
