[package]
name = "torah_search"
version = "0.1.0"
edition = "2021"
publish = false
description = "Tantivy bridge for the TorahWeb React Native app"

[lib]
name = "torah_search"
# cdylib  → Android .so / iOS dylib (rarely used directly on iOS)
# staticlib → iOS .a, linked into the app via xcframework
crate-type = ["cdylib", "staticlib"]

[dependencies]
tantivy = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }
android_logger = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
